--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.5"
+        "bootstrap": "^5.3.5",
+        "tom-select": "^2.4.3"
     }
 }
